Cleaned up auto-detect of add/delete, better large preview support

--- a/feedsidebar/chrome/content/full_preview.html
+++ b/feedsidebar/chrome/content/full_preview.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title></title>
 		<style type="text/css">
 			html, body {
 				padding: 0;
@@ -28,7 +29,7 @@
 			}
 			
 			h2 {
-				background-color: #17477f;
+				/* background-color: #236cc0; */
 				padding-left: 7ex;
 				vertical-align: middle;
 				padding-top: 8px;
@@ -39,7 +40,9 @@
 			}
 			
 			h2, h2 * {
+				/*
 				color: #fff !important;
+				*/
 			}
 			
 			h2 img {
@@ -67,7 +70,8 @@
 			
 			#outer-outer-content {
 				padding: 10px;
-				padding-top: 14px;
+				padding-top: 25px;
+				padding-bottom: 25px;
 			}
 			
 			#outer-content {
@@ -80,6 +84,10 @@
 			.quote {
 				opacity: .15;
 				padding: 0 3ex 3ex 3ex;
+			}
+			
+			a img {
+				border: 0;
 			}
 			
 		</style>
