Cleaner preview page

--- a/feedsidebar/chrome/content/full_preview.html
+++ b/feedsidebar/chrome/content/full_preview.html
@@ -6,22 +6,25 @@
 				padding: 0;
 				margin: 0;
 			}
+			
+			body {
+				width: 60%;
+				margin-left: auto;
+				margin-right: auto;
+			}
 		
 			body, h1, h2 {
-				font-size: 10pt;
-				font-family: arial, sans-serif;
+				font-size: 12pt;
+				font-family: "Times New Roman", "Times", serif;
 			}
 			
 			h1 {
-				background-color: #2f8fff;
-				padding: 3ex;
-				margin: 0;
+				font-size: 24pt;
 			}
 			
 			h1 a {
-				font-size: 14pt;
-				color: #fff;
 				text-decoration: none;
+				color: #000;
 			}
 
 			h1 a:hover {
@@ -30,19 +33,13 @@
 			
 			h2 {
 				/* background-color: #236cc0; */
-				padding-left: 7ex;
+				padding-left: 4ex;
 				vertical-align: middle;
 				padding-top: 8px;
 				padding-bottom: 8px;
 				margin: 0;
 				background-repeat: no-repeat;
-				background-position: 3ex center;
-			}
-			
-			h2, h2 * {
-				/*
-				color: #fff !important;
-				*/
+				background-position: left center;
 			}
 			
 			h2 img {
@@ -59,30 +56,14 @@
 			}
 			
 			#content {
-				background-image: url(chrome://feedbar/content/skin-common/lquote.png);
-				background-repeat: no-repeat;
-				background-position: top left;
-				padding: 0px 0px 0px 58px;
-				min-height: 35px;
-				line-height: 1.4;
-				vertical-align: middle;
+				line-height: 1.8;
 			}
 			
 			#outer-outer-content {
-				padding: 10px;
-				padding-top: 25px;
-				padding-bottom: 25px;
-			}
-			
-			#outer-content {
-				padding: 0px 58px 0px 0px;
-				background-image: url(chrome://feedbar/content/skin-common/rquote.png);
-				background-repeat: no-repeat;
-				background-position: bottom right;
+				padding: 0px 0px 25px 0px;
 			}
 			
 			.quote {
-				opacity: .15;
 				padding: 0 3ex 3ex 3ex;
 			}
 			
