--- a/feedsidebar/chrome/content/full_preview.html
+++ b/feedsidebar/chrome/content/full_preview.html
@@ -2,86 +2,88 @@
 	<head>
 		<title></title>
 		<style type="text/css">
-			html, body {
-				padding: 0;
-				margin: 0;
+			body {
+				font-family: sans-serif;
+				font-size: 12px;
+				text-rendering: optimizelegibility;
 			}
 			
-			body {
-				width: 60%;
+			#container {
+				border: 1px solid #d4d4d4;
+				max-width: 700px;
 				margin-left: auto;
 				margin-right: auto;
-			}
-		
-			body, h1, h2 {
-				font-size: 12pt;
-				font-family: "Times New Roman", "Times", serif;
+				margin-top: 40px;
+				margin-bottom: 40px;
+				padding: 40px;
 			}
 			
 			h1 {
-				font-size: 24pt;
+				font-size: 24px;
+				letter-spacing: -0.04em;
+				line-height: 28px;
+				margin-bottom: 6px;
+				margin-top: 0px;
+				max-width: 700px;
 			}
 			
 			h1 a {
 				text-decoration: none;
-				color: #000;
-			}
-
-			h1 a:hover {
-				text-decoration: underline;
+				color: #333332;
 			}
 			
 			h2 {
-				/* background-color: #236cc0; */
-				padding-left: 4ex;
-				vertical-align: middle;
-				padding-top: 8px;
-				padding-bottom: 8px;
-				margin: 0;
-				background-repeat: no-repeat;
-				background-position: left center;
+				color: #B3B3B2;
+				font-size: 12px;
+				font-weight: 400;
+				line-height: 17px;
 			}
 			
-			h2 img {
-				margin-right: 5px;
+			h2 a {
+				color: inherit;
+				text-decoration: none;
 			}
 			
-			#outer-content { 
-				background-color: #fff;
-			}
-			
-			#navigation {
-				padding: 3ex;
-				background-color: #eee;
+			h2 a:hover {
+				text-decoration: underline;
 			}
 			
 			#content {
-				line-height: 1.8;
+				color: #494949;
+				font-size: 14px;
+				line-height: 1.7;
+				margin-top: 17px;
 			}
 			
-			#outer-outer-content {
-				padding: 0px 0px 25px 0px;
+			#big-site-link {
+				background-color: #EFEFEF;
+				border: 3px solid transparent;
+				border-radius: 3px;
+				color: #BBB;
+				display: block;
+				font-size: 12px;
+				line-height: 40px;
+				margin-top: 34px;
+				text-align: center;
+				text-decoration: none;
+				transition: background-color 0.3s ease 0s, color 0.3s ease 0s;
 			}
 			
-			.quote {
-				padding: 0 3ex 3ex 3ex;
+			#big-site-link:hover {
+				background-color: #DFDFDF;
+				color: #777;
 			}
-			
-			a img {
-				border: 0;
-			}
-			
 		</style>
 	</head>
 	<body>
-		<h2 id="site-info"></h2>
-		<h1 id="title"></h1>
-		<div id="outer-outer-content">
-			<div id="outer-content">
-				<div id="content">
-				</div>
+		<div id="container">
+			<h1 id="title"></h1>
+			<h2 id="site-info">
+				<a id="site-link" target="_blank"></a> // <span id="timestamp"></span>
+			</h2>
+			<div id="content">
 			</div>
+			<a id="big-site-link" target="_blank"></a>
 		</div>
-		<div id="navigation"></div>
 	</body>
 </html>
